# cc2-emotion-recognition

./: .gitignore  README_EXAM.md  best_models.sh  pyproject.toml  requirements.txt  schedule.sh
best_models/: best_text_model.ckpt
configs/: train.yaml
configs/callbacks/: default.yaml
configs/data/: cmu_audio.yaml  cmu_bert.yaml  cmu_glove.yaml  cmu_trimodal.yaml  cmu_video.yaml
configs/experiment/: cmu_audio.yaml  cmu_bert.yaml  cmu_glove.yaml  cmu_trimodal.yaml  cmu_video.yaml
configs/logger/: default.yaml  wandb.yaml
configs/model/: cmu_bert.yaml  cmu_glove.yaml  cmu_trimodal.yaml  cmu_video_audio.yaml
configs/trainer/: default.yaml
logs/train/: best_video_model.ckpt
mmsdk/mmdatasdk/dataset/standard_datasets/CMU_MOSEI/: cmu_mosei.py
notebooks/: best_audio_confmatrices.ipynb  best_text_confmatrices.ipynb  best_trimodal_confmatrices.ipynb  best_video_confmatrices.ipynb  test_checkpoint.ckpt  test_text_confmatrices.ipynb
src/: train.py
src/data/: audio_datamodule.py  cmu_datamodule.py  text_datamodule.py  trimodal_datamodule.py  video_datamodule.py
src/data/components/: cmu_mosei_raw_dataset.py  text_dataset.py  trimodal_dataset.py  video_and_audio_dataset.py
src/lightning_logs/version_0/: metrics.csv
src/models/: cmu_mosei_module.py
src/models/components/: bert_emotion_classifier.py  classifier.py  emotion_embedding_creator.py  glove_embedding_creator.py  trimodal_embedding_creator.py  video_emotion_embedding_creator.py
src/utils/: data_helper.py
