[project]
name = "lhw-starter"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.0.0",
    "transformers>=4.52.3",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "torchmetrics>=0.11.4",
    "h5py>=3.13.0",
    "validators>=0.35.0",
    "colorama>=0.4.6",
    "wandb>=0.19.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.6.1",
    "notebook>=7.4.3",
    "tqdm"
]

[dependency-groups]
dev = [

    # --------- hydra --------- #
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",

    "rootutils",
    "pre-commit",
    "rich",
    "pytest",
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
